2012-05-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a minor version number. Official release 15.1.0.

	* src/main.cpp:
	- updated the copyright message.

	* INSTALL:
	* m4/ax_boost_program_options.m4:
	- updated autoconf macro

2011-11-17  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* m4/ax_boost_system.m4:
	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- fixed boost detection problems.

2011-08-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/main.cpp:
	- set "C" to the global locale.

2011-05-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	- updated a major version number. Official release 15.0.0.

	* src/main.cpp:
	- updated a copyright message.

	* src/rcsslogplayer/parser.cpp:
	* src/rcsslogplayer/types.cpp:
	* src/rcsslogplayer/types.h:
	- supported a new parameter of rcssserver-15.

2010-12-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* src/src.pro:
	- updated a point version number. Official release 14.1.1.

	* src/src.pro:
	- disabled QtOpenGL.

2010-08-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* INSTALL:
	- updated by autotools.

	* configure.ac:
	- disabled glwidget by default.

2010-04-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/ax_boost_base.m4:
	* m4/ax_boost_program_options.m4:
	- updated autoconf macros.

	* src/src.pro:
	- fixed build problems on OSX.

2010-03-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	* src/src.pro:
	- updated a minor version number. Official release 14.1.0.

	* src/log_player.cpp:
	* src/log_player.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/monitor_client.cpp:
	* src/monitor_client.h:
	* src/options.cpp:
	* src/options.h:
	- implemented automatic reconnection.
	- added new options, "--auto-reconnect-mode" and "--auto-reconnect-wait".
	- changed the policy of configuration file generation.